@@ -39,14 +39,4 @@ $(LIB): $(OBJ)
 %.rul: %.def
 	$(AWK) -f $(srcdir)/../SDCCpeeph.awk $< > $@
 
-dep: Makefile.dep
-
-Makefile.dep: $(PREBUILD) Makefile $(SOURCES) $(CXXSOURCES) $(SPECIAL)
-	$(MAKEDEP) $(CPPFLAGS) $(filter %.c %.cc,$^) >Makefile.dep
-
-# don't include Makefile.dep for the listed targets:
-ifeq "$(findstring $(MAKECMDGOALS),clean distclean)" ""
-  -include Makefile.dep
-endif
-
 include $(srcdir)/../port-clean.mk
